force-app/main/default/objects/Certification_Attempt__c/Certification_Attempt__c.object-meta.xml
<CustomObject>
    <label>Certification Attempt</label>
    <nameField>
        <displayFormat>ATTEMPT-{00000}</displayFormat>
        <label>Certification Attempt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certification Attempts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>