force-app/main/default/objects/Certification_Attempt__c/fields/Certification_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Certification_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact who is taking a certification attempt.</description>
    <label>Certification Candidate</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Technician</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Certification Attempts</relationshipLabel>
    <relationshipName>Certification_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>