force-app/main/default/objects/Certification_Attempt__c/fields/Certification_Element__c.field-meta.xml
<CustomField>
    <fullName>Certification_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Certification element for this attempt</description>
    <label>Certification Element</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Certification_Element__c.Type__c</field>
            <operation>equals</operation>
            <value>Multiple Choice</value>
        </filterItems>
        <filterItems>
            <field>Certification_Element__c.Type__c</field>
            <operation>equals</operation>
            <value>Lab</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Certification_Element__c</referenceTo>
    <relationshipLabel>Certification Attempts</relationshipLabel>
    <relationshipName>Certification_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>