force-app/main/default/objects/Certification_Attempt__c/recordTypes/Lab.recordType-meta.xml
<RecordType>
    <fullName>Lab</fullName>
    <active>true</active>
    <description>Use to create a lab certification attempt.</description>
    <label>Lab</label>
</RecordType>