force-app/main/default/objects/Certification_Attempt__c/recordTypes/Multiple_Choice.recordType-meta.xml
<RecordType>
    <fullName>Multiple_Choice</fullName>
    <active>true</active>
    <description>Use to create a multiple choice certification attempt.</description>
    <label>Multiple Choice</label>
</RecordType>